????-??-??  Michele Caini  <skypjack@gmail.com>

	* stack.[hc]: deleted
	* grimbleby.[hc]: deleted

	* expr.[hc] (stack_to_expr): deleted
	* expr.[hc] (circ_to_expr): added with related function

	* sapec-ng.c (resolve): based on circ_to_expr function

2007-02-22  Michele Caini  <skypjack@gmail.com>

	* lexer.l: symbols restyling

	* parser.y (elm_tokens, acelm): Operational Amplifier management
	(elm): unique function for elements management (selm/celm fusion)
	* lexer.l (ACID): new symbol added
	({ACID}): new symbol management

	* sapec-ng.dox: new separate manual-like pages

	* src/common.h (flags): new SapWin related flag and macros
	* src/sapec-ng.c (main): SapWin flag management
	* src/parser.y (selm): SapWin flag related swap

	* src/common.h (flags): new binary file related flag and macros
	* src/sapec-ng.c (main): binary flag management
	(load_and_splash): new function added (binary file related)

	* src/sapec-ng.c (usage): infos about new flags

2007-11-25  Michele Caini  <skypjack@gmail.com>

	* src/*.[hc] (all sources): commented! :-)

	* src/parser.y: warning at compile-time solved
	more flexible parser (elements' order independent)
	edge orientation handler (with reverse-sign)
	* src/lexer.l: warning at compile-time solved
	internal buffer/stack memory leak solved
	comments-capable (comments start with '*' character)
	int/real scientific notation treatment added
	SID/CID extended identifier notation
	* src/parser.y, src/lexer.l: int/real conflict solved
	(selm/celm): added with int/real handler
	(selm/celm): negative node control
	(selm/celm): undefined status control
	output-node upper bound limit control

	* src/common.h (flags): flags added (environment)
	(flags): flags management related macros
	* src/sapec-ng.c (main): environment management
	(verbose): mode added into resolve function

	* src/list.[hc] (list_next_entry): macro added
	(list_data): macro added

	* src/expr.c (splash): length computation refined
	(splash): sign handler added